added link to the github release page

--- a/pages/testsmelldetector.html
+++ b/pages/testsmelldetector.html
@@ -67,6 +67,10 @@
         </div>
         <div class="w3-container">
             <h4 class="w3-center w3-margin-top" style="text-decoration: underline">Tool Usage</h4>
+            <h5 style="text-decoration: underline">Download</h5>
+            <p>
+                Download the latest release from <a href="https://github.com/TestSmells/TestSmellDetector/releases" target="_blank">here</a>.
+            </p>
             <h5 style="text-decoration: underline">Input</h5>
             <p>
                 Prior to executing the tool, an CSV file needs to be created. The CSV file specifies the list of test
