updated the location of the anchor tags

--- a/pages/testsmellexamples.html
+++ b/pages/testsmellexamples.html
@@ -29,7 +29,7 @@
     <script>hljs.initHighlightingOnLoad();</script>
 
 </head>
-<body>
+<body id="pageBody">
 
 <ul class="topnav w3-small">
     <li><a href="../index.html">Home</a></li>
@@ -52,7 +52,7 @@
         <p>
             Provided below are examples of test smells that were detected in open-source projects.
         </p>
-        <ul id="SmellList">
+        <ul>
             <li>
                 <a href="#AssertionRoulette">Assertion Roulette</a>
             </li>
@@ -137,7 +137,7 @@ public void testCloneNonBareRepoFromLocalTestServer() throws Exception {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/rtyley/agit/blob/fc99d8eaa42940198589b032a2b9ba74d9ce3094/agit-integration-tests/src/main/java/com/madgag/agit/GitAsyncTaskTest.java"
                         target="_blank">GitAsyncTaskTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="ConditionalTestLogic">
@@ -177,7 +177,7 @@ public void testSpinner() {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/Tyde/TuCanMobile/blob/dbee8a0a738400427bb94e5bc38a9970687ac147/app/src/test/java/com/dalthed/tucan/EventsScraperTest.java"
                         target="_blank">EventsScraperTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="ConstructorInitialization">
@@ -213,7 +213,7 @@ public class TagEncodingTest extends BrambleTestCase {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://code.briarproject.org/akwizgran/briar/blob/0327d4f38a16b09be7cb2578d7c6f694093e65df/bramble-core/src/test/java/org/briarproject/bramble/crypto/TagEncodingTest.java"
                         target="_blank">TagEncodingTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="DefaultTest">
@@ -247,7 +247,7 @@ public class ExampleUnitTest {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/httpdispatch/MissedNotificationsReminder/blob/350c3a8fbab935a733d371860e86a937c1d17b2c/app/src/test/java/com/app/missednotificationsreminder/ExampleUnitTest.java"
                         target="_blank">ExampleUnitTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="DuplicateAssert">
@@ -292,7 +292,7 @@ public void testXmlSanitizer() {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/openbmap/radiocells-scanner-android/blob/d6353829f786180ec5ba548ed2adf747e816f735/android/app/src/test/java/org/openbmap/utils/XmlSanitizerTest.java"
                         target="_blank">XmlSanitizerTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="EagerTest">
@@ -315,7 +315,7 @@ public void NmeaSentence_GPGSA_ReadValidValues(){
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/mendhak/gpslogger/blob/d3252604b204e0995254c6f40599de470bacd76b/gpslogger/src/test/java/com/mendhak/gpslogger/loggers/nmea/NmeaSentenceTest.java"
                         target="_blank">NmeaSentenceTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="EmptyTest">
@@ -335,7 +335,7 @@ public void testCredGetFullSampleV1() throws Throwable{
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/activems/clipcaster/blob/38398d1d047a4064a7017ca8f0d0f3ff0782560c/app/src/androidTest/java/com/actisec/clipcaster/parser/LastPassParserTest.java"
                         target="_blank">LastPassParserTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="ExceptionHandling">
@@ -390,7 +390,7 @@ public void realCase() {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/hgdev-ch/toposuite-android/blob/2d76131d26871392ebf2a2c9ac3657592a9549f3/app/src/androidTest/java/ch/hgdev/toposuite/test/calculation/AbrissTest.java"
                         target="_blank">AbrissTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="GeneralFixture">
@@ -424,7 +424,7 @@ public void testIsCA() {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/bitfireAT/cadroid/blob/84cecaf2691dffe6eb1f5c300d9fe52b21d7b536/app/src/androidTest/java/at/bitfire/cadroid/test/CertificateInfoTest.java"
                         target="_blank">CertificateInfoTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="IgnoredTest">
@@ -448,7 +448,7 @@ public void peerPriority() throws Exception {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="#"
                         target="_blank"></a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="LazyTest">
@@ -484,7 +484,7 @@ public void testEncrypt() throws Exception {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/MarmaladeSky/aRevelation/blob/950309c589d55b3fc8c879d548bae2224d558668/src/test/java/com/github/marmaladesky/tests/CryptographerTest.java"
                         target="_blank">CryptographerTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="MagicNumberTest">
@@ -504,7 +504,7 @@ public void testGetLocalTimeAsCalendar() {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/Cbsoftware/PressureNet/blob/f575e9b513f4f2eef803869ca96f9056d8c6120e/lib/sunrisesunsetlib/src/test/java/com/luckycatlabs/sunrisesunset/calculator/SolarEventCalculatorTest.java"
                         target="_blank">SolarEventCalculatorTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="MysteryGuest">
@@ -537,7 +537,7 @@ public void testPersistence() throws Exception {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/walles/batterylogger/blob/11d81ee721fc12ad324f4a04e265b0ff8c553736/src/androidTest/java/com/gmail/walles/johan/batterylogger/SystemStateTest.java"
                         target="_blank">SystemStateTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="RedundantPrint">
@@ -562,7 +562,7 @@ public void testTransform10mNEUAndBack() {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/richsmith/sexytopo/blob/80cd8bbda23fba569ed470d80ed99e6bcbec5159/app/src/test/java/org/hwyl/sexytopo/control/util/Space3DTransformerTest.java"
                         target="_blank">Space3DTransformerTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="RedundantAssertion">
@@ -581,7 +581,7 @@ public void testTrue() {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/nus-mtp/worldscope/blob/41770e12e0780b57ad80a48c2a4cd07f57aadfa6/client/android/WorldScope/app/src/androidTest/java/com/litmus/worldscope/LoginActivityTest.java"
                         target="_blank">LoginActivityTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="ResourceOptimism">
@@ -605,7 +605,7 @@ assertThatJson(response.body())
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/Freeyourgadget/Gadgetbridge/blob/d9283d0f2265fbe36759d01f9ae52cd9d3605585/app/src/test/java/nodomain/freeyourgadget/gadgetbridge/test/LoggingTest.java"
                         target="_blank">LoggingTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="SensitiveEquality">
@@ -637,7 +637,7 @@ public void test1() throws UnknownHostException {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/liveplayergames/UFP/blob/master/android/ethereumj-core/src/test/java/org/ethereum/util/RLPTest.java"
                         target="_blank">RLPTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="SleepyTest">
@@ -672,7 +672,7 @@ public void testEdictExternSearch() throws Exception {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/mvysny/aedict/blob/a28dc4d98962d5d8930f3be42d9e2d7b55619c42/aedict-apk-test/src/sk/baka/aedict/ResultActivityTest.java"
                         target="_blank">ResultActivityTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
         <div class="w3-container" id="UnknownTest">
@@ -693,7 +693,7 @@ public void hitGetPOICategoriesApi() throws Exception {
                 <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/cyclestreets/android/blob/d7a241721e7c2298e40318158943c193ad8e107a/libraries/cyclestreets-core/src/test/java/net/cyclestreets/api/client/RetrofitApiClientIntegrationTest.java"
                         target="_blank">RetrofitApiClientIntegrationTest.java</a></span>
-                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+                <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
     </div>
