--- a/pages/testsmells.html
+++ b/pages/testsmells.html
@@ -58,6 +58,7 @@
     <li><a class="active" href="testsmells.html">Test Smell Types</a></li>
     <li><a href="testsmellexamples.html">Test Smell Examples</a></li>
     <li><a href="testsmelldetector.html">Test Smell Detector</a></li>
+    <li><a href="../pages/research/home.html">Test Smell Research</a></li>
     <li class="right"><a href="about.html">About</a></li>
 </ul>
 
