added details on tool comparison

--- a/pages/research/home.html
+++ b/pages/research/home.html
@@ -67,7 +67,7 @@
         <li><a href="../testsmells.html">Test Smell Types</a></li>
         <li><a href="../testsmellexamples.html">Test Smell Examples</a></li>
         <li><a href="../testsmelldetector.html">Test Smell Detector</a></li>
-        <li><a class="active"  href="#">Test Smell Research</a></li>
+        <li><a class="active" href="#">Test Smell Research</a></li>
         <li class="right"><a href="../about.html">About</a></li>
     </ul>
 
@@ -82,7 +82,8 @@
     <div class="w3-center w3-padding-32">
         <div class="w3-card w3-container w3-justify w3-padded-box">
             <p>
-                Provided below are supplements to the original research on test smells that was performed using tsDetect.
+                Provided below are supplements to the original research on test smells that was performed using
+                tsDetect.
             </p>
             <ul>
                 <li>
@@ -111,11 +112,11 @@
             <div class="w3-container" id="ToolComparison">
                 <h5>Tool Comparison</h5>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-                    in culpa qui officia deserunt mollit anim id est laborum.
+                    As part of our study, we also performed a comparative exercise of tsDetects ability of smell
+                    detection against state-of-art detection strategies.
+                    <br>
+                    <span class=" w3-small w3-left-align"><a href="toolcompare.html">Click to continue reading...</a></span>
+                    <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
                 </p>
                 <p>
                     <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
