--- a/pages/testsmelldetector.html
+++ b/pages/testsmelldetector.html
@@ -109,6 +109,12 @@
             </p>
         </div>
     </div>
+
+    <div class="w3-card w3-padded-box w3-margin-top">
+        <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
+            &nbsp;
+        </div>
+    </div>
 </div>
 
 <footer class="w3-container w3-teal w3-footer w3-animate-opacity">
