--- a/pages/testsmellexamples.html
+++ b/pages/testsmellexamples.html
@@ -726,6 +726,12 @@ public void hitGetPOICategoriesApi() throws Exception {
             </p>
         </div>
     </div>
+
+    <div class="w3-card w3-padded-box w3-margin-top">
+        <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
+            &nbsp;
+        </div>
+    </div>
 </div>
 
 
