--- a/pages/testsmells.html
+++ b/pages/testsmells.html
@@ -422,7 +422,12 @@
             </p>
         </div>
     </div>
-
+    
+    <div class="w3-card w3-padded-box w3-margin-top">
+        <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
+            &nbsp;
+        </div>
+    </div>
 
 </div>
 
