minor formatting fixex

--- a/pages/research/toolcompare.html
+++ b/pages/research/toolcompare.html
@@ -67,7 +67,7 @@
         <li><a href="../testsmells.html">Test Smell Types</a></li>
         <li><a href="../testsmellexamples.html">Test Smell Examples</a></li>
         <li><a href="../testsmelldetector.html">Test Smell Detector</a></li>
-        <li><a class="active" href="#">Test Smell Research</a></li>
+        <li><a class="active" href="home.html">Test Smell Research</a></li>
         <li class="right"><a href="../about.html">About</a></li>
     </ul>
 
@@ -196,7 +196,7 @@ public void testParseRadicalName() {
                 </code></pre>
             </div>
         </div>
-        
+
         <div class="w3-card w3-padded-box w3-margin-top">
             <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
                 &nbsp;
