added content on technical debt & test smells

--- a/pages/research/home.html
+++ b/pages/research/home.html
@@ -93,7 +93,7 @@
                     <a href="#ToolComparison">Tool Comparison</a>
                 </li>
                 <li>
-                    <a href="#TechnicalDebt">Technical Debt</a>
+                    <a href="#TechnicalDebt">Test Smells & Technical Debt</a>
                 </li>
             </ul>
             <div class="w3-container" id="ExperimentData">
@@ -122,13 +122,18 @@
                 </p>
             </div>
             <div class="w3-container" id="TechnicalDebt">
-                <h5>Technical Debt</h5>
+                <h5>Test Smells & Technical Debt</h5>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-                    in culpa qui officia deserunt mollit anim id est laborum.
+                    Do test smells act as an indicator of technical debt within the test suite?
+                </p>
+                <p>
+                    The intuition behind this research question resides in validating whether the intentional deviation
+                    of optimal test files design, due to taking shortcuts in programming, can be in the form of test
+                    smells. To address this research question, we observe the co-location of self-admitted technical
+                    debt (SATD) in unit test files, with their infection with specific smell types. Thus, we validate
+                    whether test smells can act as an indicator of the presence of technical debt in test files.
+                    <br>
+                    <span class=" w3-small w3-left-align"><a href="technicaldebt.html">Click to continue reading...</a></span>
                 </p>
                 <p>
                     <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
