--- a/pages/research/home.html
+++ b/pages/research/home.html
@@ -93,6 +93,9 @@
                     <a href="#ToolComparison">Tool Comparison</a>
                 </li>
                 <li>
+                    <a href="#TestSuiteCharacteristics">Test Suite Characteristics</a>
+                </li>
+                <li>
                     <a href="#TechnicalDebt">Test Smells & Technical Debt</a>
                 </li>
             </ul>
@@ -116,6 +119,22 @@
                     detection against state-of-art detection strategies.
                     <br>
                     <span class=" w3-small w3-left-align"><a href="toolcompare.html">Click to continue reading...</a></span>
+                </p>
+                <p>
+                    <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
+                </p>
+            </div>
+            <div class="w3-container" id="TestSuiteCharacteristics">
+                <h5>Test Suite Characteristics</h5>
+                <p>
+                    Do specific test smells have an impact on test suite characteristics?
+                </p>
+                <p>
+                    To further understand the degree to which test smells can impact software maintenance activities of
+                    an Android app, we studied the impact of each test smell type on specific characteristics of the
+                    apps test suite.
+                    <br>
+                    <span class=" w3-small w3-left-align"><a href="testsuitecharacteristics.html">Click to continue reading...</a></span>
                 </p>
                 <p>
                     <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
