--- a/pages/research/home.html
+++ b/pages/research/home.html
@@ -96,6 +96,9 @@
                     <a href="#TestSuiteCharacteristics">Test Suite Characteristics</a>
                 </li>
                 <li>
+                    <a href="#TestSmellIntroduction">Test Smell Introduction</a>
+                </li>
+                <li>
                     <a href="#TechnicalDebt">Test Smells & Technical Debt</a>
                 </li>
             </ul>
@@ -134,7 +137,25 @@
                     an Android app, we studied the impact of each test smell type on specific characteristics of the
                     apps test suite.
                     <br>
-                    <span class=" w3-small w3-left-align"><a href="testsuitecharacteristics.html">Click to continue reading...</a></span>
+                    <span class=" w3-small w3-left-align"><a href="testsuitecharacteristics.html">Click to continue
+                            reading...</a></span>
+                </p>
+                <p>
+                    <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
+                </p>
+            </div>
+            <div class="w3-container" id="TestSmellIntroduction">
+                <h5>Test Smell Introduction</h5>
+                <p>
+                    When are test smells first introduced into the project?
+                </p>
+                <p>
+                    Our study on the introduction of test smells into a project involved the analysis of commits to
+                    identify when the first commit of a smelly test file occurs and the number of smells introduced
+                    when a unit test file is added to the project.
+                    <br>
+                    <span class=" w3-small w3-left-align"><a href="smellintroduction.html">Click to continue
+                            reading...</a></span>
                 </p>
                 <p>
                     <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
