--- a/pages/research/home.html
+++ b/pages/research/home.html
@@ -99,6 +99,9 @@
                     <a href="#TestSmellIntroduction">Test Smell Introduction</a>
                 </li>
                 <li>
+                    <a href="#DeveloperExperience">Developer Experience</a>
+                </li>
+                <li>
                     <a href="#TechnicalDebt">Test Smells & Technical Debt</a>
                 </li>
             </ul>
@@ -153,6 +156,24 @@
                     Our study on the introduction of test smells into a project involved the analysis of commits to
                     identify when the first commit of a smelly test file occurs and the number of smells introduced
                     when a unit test file is added to the project.
+                    <br>
+                    <span class=" w3-small w3-left-align"><a href="smellintroduction.html">Click to continue
+                            reading...</a></span>
+                </p>
+                <p>
+                    <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
+                </p>
+            </div>
+            <div class="w3-container" id="DeveloperExperience">
+                <h5>Developer Experience</h5>
+                <p>
+                    Does developer experience have a part to play in the existence of test smells?
+                </p>
+                <p>
+                    Our investigation into the type of users that introduce test smells into unit test files involved
+                    determining the experience of the developer at the time of performing a commit of a smelly file. To
+                    this extent, we calculated the Developer Commit Experience (DCE) for each developer for every
+                    commit performed by the developer.
                     <br>
                     <span class=" w3-small w3-left-align"><a href="smellintroduction.html">Click to continue
                             reading...</a></span>
