--- a/pages/research/testsuitecharacteristics.html
+++ b/pages/research/testsuitecharacteristics.html
@@ -111,7 +111,7 @@
                         class="w3-cite">[2]</span></a> with test suite characteristics. Given these
                     results the Null Hypothses can be rejected. As such, developers need to pay careful attention to the
                     quality of the code that they write for unit tests, much in the same way they do for production
-                    tests, as a means to reduce the effort required to maintain the test code 
+                    tests, as a means to reduce the effort required to maintain the test code. 
                 </p> 
                 <img src="assets/testsuitecharacteristics.png" />                
         </div>
