placeholder page for experiment data

--- a/pages/research/home.html
+++ b/pages/research/home.html
@@ -113,6 +113,8 @@
                     nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
                     esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
                     in culpa qui officia deserunt mollit anim id est laborum.
+                    <br>
+                    <span class=" w3-small w3-left-align"><a href="experimentdata.html">Click to continue reading...</a></span>
                 </p>
                 <p>
                     <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
